# mc970-parallel-computing

./: README.md
cuda-exercises/: README.md
cuda-exercises/01-matsum/: README.md  matsum-cenapad.pbs
cuda-exercises/01-matsum/src/: matsum-parallel.cu
cuda-exercises/02-histogram/: README.md  histogram-cenapad.pbs
cuda-exercises/02-histogram/src/: histogram-parallel.cu
cuda-exercises/03-smoothing/: README.md  smoothing-cenapad.pbs
cuda-exercises/03-smoothing/src/: smooth-parallel.cu
final-project/: README.md  blur_parallel.c  blur_serial.c  floyd_parallel_1.c  floyd_parallel_2.c  floyd_serial.c  generate.c
openmp-exercises/: README.md
openmp-exercises/01-ompfor-matmul/: README.md
openmp-exercises/01-ompfor-matmul/src/: matmul-parallel.c  matmul-serial.c
openmp-exercises/01-ompfor-matmul/tests/: 1.out  2.out
openmp-exercises/02-ompfor-prime/: CMakeLists.txt  README.md
openmp-exercises/02-ompfor-prime/src/: prime-parallel.c
openmp-exercises/02-ompfor-prime/tests/: 1.out  2.out  3.out  4.out  5.out
openmp-exercises/03-omptask-zip/: README.md
openmp-exercises/04-omptask-treereduce/: README.md
threads-exercises/: README.md
threads-exercises/01-hello-threads/: CMakeLists.txt  README.md
threads-exercises/01-hello-threads/src/: hello_threads.c  hello_threads_solution.c
threads-exercises/03-monte-carlo-pi/: CMakeLists.txt  README.md
threads-exercises/03-monte-carlo-pi/src/: monte_carlo_parallel.cpp  monte_carlo_serial.cpp
threads-exercises/04-false-sharing/: CMakeLists.txt  README.md
threads-exercises/04-false-sharing/src/: sum_scalar.c  sum_scalar_solution.c
(+2 files in other folders)
